# yolov5-multi-video-inference

./: CMakeLists.txt  LICENSE  README.md  passing_one_obj.hpp  queue.cpp  yolov5.cpp
